# Boris2

./: .gitignore  Boris.sln  BorisWinapi.sln  README.md  makefile  pyproject.toml
Boris/: Anisotropy.cpp  Anisotropy.h  AnisotropyBiaxial.cpp  AnisotropyBiaxial.h  AnisotropyBiaxialCUDA.cpp  AnisotropyBiaxialCUDA.cu  AnisotropyBiaxialCUDA.h  AnisotropyCUDA.cpp  AnisotropyCUDA.h  AnisotropyCubi.cpp  AnisotropyCubi.h  AnisotropyCubiCUDA.cpp  AnisotropyCubiCUDA.cu  AnisotropyCubiCUDA.h  AnisotropyTensorial.cpp  AnisotropyTensorial.h  AnisotropyTensorialCUDA.cpp  AnisotropyTensorialCUDA.h  AnisotropyUniCUDA.cu  Atom_Anisotropy.cpp  Atom_Anisotropy.h  Atom_AnisotropyBiaxial.cpp  Atom_AnisotropyBiaxial.h  Atom_AnisotropyBiaxialCUDA.cpp  Atom_AnisotropyBiaxialCUDA.h  Atom_AnisotropyCUDA.cpp  Atom_AnisotropyCUDA.h  Atom_AnisotropyCubi.cpp  Atom_AnisotropyCubi.h  Atom_AnisotropyCubiCUDA.cpp  Atom_AnisotropyCubiCUDA.cu  Atom_AnisotropyCubiCUDA.h  Atom_AnisotropyTensorial.cpp  Atom_AnisotropyTensorial.h  Atom_AnisotropyTensorialCUDA.cpp  Atom_AnisotropyTensorialCUDA.cu  Atom_AnisotropyTensorialCUDA.h  Atom_AnisotropyUniCUDA.cu  Atom_DMExchange.cpp  Atom_DMExchange.h  (+696 more)
BorisCUDALib/: BorisCUDALIB.cuh  BorisCUDALib.cuh  BorisCUDALib.h  CUDAError.h  Reduction.cuh  TEquationCUDA.h  TEquationCUDA_Component.h  TEquationCUDA_Function.cuh  TEquationCUDA_Function.h  alloc_cpy.cuh  alloc_cpy.h  alloc_cpy2.h  atomics.cuh  cuArray.h  cuArray_aux.h  cuArray_mng_cpu.h  cuArray_mng_gpu.h  cuArray_sizing.h  cuArray_transfer.h  cuBLib_Flags.h  cuBRealComplex.h  cuFuncs_Aux.h  cuFuncs_Math.cuh  cuVEC.h  (+59 more)
(+1767 files in other folders)
